// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryButton Tests should be able to match with snapshot with onPress 1`] = `
<RNGestureHandlerButton
  activeOpacity={0.8}
  borderless={true}
  collapsable={false}
  delayLongPress={600}
  handlerTag={4}
  handlerType="NativeViewGestureHandler"
  onActiveStateChange={[Function]}
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  onPress={[MockFunction]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FE8C00",
      "borderRadius": 31,
      "height": 63,
      "justifyContent": "center",
      "opacity": 1,
      "width": 63,
    }
  }
  testID="PrimaryButtonID"
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": undefined,
          "fontSize": 12,
        },
        [
          {
            "color": "#FFFFFF",
            "fontSize": 31,
          },
        ],
        {
          "fontFamily": "Feather",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</RNGestureHandlerButton>
`;

exports[`PrimaryButton Tests should be able to match with snapshot without onPress 1`] = `
<RNGestureHandlerButton
  activeOpacity={0.8}
  borderless={true}
  collapsable={false}
  delayLongPress={600}
  handlerTag={3}
  handlerType="NativeViewGestureHandler"
  onActiveStateChange={[Function]}
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FE8C00",
      "borderRadius": 31,
      "height": 63,
      "justifyContent": "center",
      "opacity": 1,
      "width": 63,
    }
  }
  testID="PrimaryButtonID"
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": undefined,
          "fontSize": 12,
        },
        [
          {
            "color": "#FFFFFF",
            "fontSize": 31,
          },
        ],
        {
          "fontFamily": "Feather",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</RNGestureHandlerButton>
`;
